After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 701326 - gnome-xkb-info: Fix memory leak
gnome-xkb-info: Fix memory leak
Status: RESOLVED FIXED
Product: gnome-desktop
Classification: Core
Component: libgnome-desktop
unspecified
Other All
: Normal normal
: ---
Assigned To: Desktop Maintainers
Desktop Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-05-31 03:00 UTC by darkxst
Modified: 2013-05-31 08:18 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gnome-xkb-info: Fix memory leak (830 bytes, patch)
2013-05-31 03:00 UTC, darkxst
committed Details | Review

Description darkxst 2013-05-31 03:00:33 UTC
Don't leak the country string
Comment 1 darkxst 2013-05-31 03:00:35 UTC
Created attachment 245698 [details] [review]
gnome-xkb-info: Fix memory leak
Comment 2 Rui Matos 2013-05-31 08:18:35 UTC
Thanks for the patch! Pushed a similar one for a language string too.

Attachment 245698 [details] pushed as d18494e - gnome-xkb-info: Fix memory leak